--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- Navbar Start -->
   <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-dark navbar-dark py-3 py-lg-0 px-lg-5">
     <a href="index.html" class="navbar-brand d-block d-lg-none">
-      <h1 class="font-secondary text-white mb-n2">Jack <span class="text-primary">&</span> Rose</h1>
+      <h1 class="font-secondary text-white mb-n2">Roney <span class="text-primary">&</span> Greeshma</h1>
     </a>
     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
       <span class="navbar-toggler-icon"></span>
@@ -80,7 +80,7 @@
           <img class="position-absolute w-100 h-100" src="img/carousel-2.jpg" style="object-fit: cover" />
           <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
             <div class="p-3" style="max-width: 900px">
-              <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Jack & Rose</h1>
+              <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Roney & Greeshma</h1>
               <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
                 <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px">We're getting
                   married</h3>
