--- a/index.html
+++ b/index.html
@@ -506,8 +506,8 @@
               <span class="px-3 d-none d-md-inline">|</span>
               <a class="text-white" href="tel:+919526064340">Groom: Roney - +91 95260 64340</a>
           </div>
-          <p class="m-0">
-              &copy; <a class="text-primary" href="#">Roney&Greesgma</a>. All rights reserved.
+          <p class="m-0" style="font-size: 8px;">
+              &copy; <a class="text-primary"  href="#">Roney&Greesgma</a>. All rights reserved.
           </p>
       </div>
   </div>
