--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h1 class="font-secondary text-white mb-n2">Roney <span class="text-primary">&</span> Greeshma</h1>
         </a>
         <div class="navbar-nav mr-auto py-0">
-          <a href="#family" class="nav-item nav-link">Family</a>
+          <!-- <a href="#family" class="nav-item nav-link">Family</a> -->
           <a href="#event" class="nav-item nav-link">Event</a>
           <a href="#rsvp" class="nav-item nav-link">RSVP</a>
           <a href="#contact" class="nav-item nav-link">Contact</a>
